--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -1,3 +1,5 @@
+/* main */
+
 .Main.open{
   animation: bounce-in 1s ease;
 }
@@ -18,4 +20,40 @@
   background-size: contain;
   background-repeat: repeat;
   place-items: center center;
+}
+
+/* modal */
+.mymodal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  background: none;
+  overflow: auto;
+  border-radius: 0;
+  outline: none;
+  padding: 0;
+}
+
+.myoverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
 }
